--- a/src/app.css
+++ b/src/app.css
@@ -3,20 +3,11 @@
 @tailwind utilities;
 
 .main {
-	@apply min-h-screen max-w-3xl xl:max-w-5xl py-2 px-6 xl:px-0 mx-auto mt-20;
-}
-
-.tag-item + .tag-item::before {
-	content: '\02022';
-	@apply px-2 py-0;
+	@apply min-h-screen max-w-3xl xl:max-w-5xl py-2 px-6 xl:px-0 mx-auto;
 }
 
 .cover {
 	@apply w-full max-w-xs h-auto mx-auto rounded-md drop-shadow-md;
-}
-
-.blog-posts {
-	@apply pb-6 font-extrabold text-2xl tracking-tight sm:text-3xl md:text-5xl border-b border-gray-700 dark:border-gray-200;
 }
 
 .novel-head {
